--- a/AtCoder/AtCoder.vcxproj.filters
+++ b/AtCoder/AtCoder.vcxproj.filters
@@ -9,6 +9,9 @@
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Problems\EducationalDP.cpp" />
     <ClCompile Include="Problems\ABC173.cpp" />
+    <ClCompile Include="Problems\ABC172.cpp" />
+    <ClCompile Include="Problems\ABC171.cpp" />
+    <ClCompile Include="Problems\M-SOLUTIONS.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="bits\stdc++.h">
